# mcp-server-trading-212

./: .env.template  LICENSE  README.md  api_client_212.py  main.py  pyproject.toml
